# next.js-django-template

./: .gitignore  Readme.md
backend/: .gitignore  Readme.md  pyproject.toml
backend/.zed/: settings.json
backend/backend/accounts/: urls.py  views.py
backend/backend/accounts/migrations/: 0001_initial.py
backend/backend/main/: asgi.py  settings.py  urls.py  wsgi.py
backend/scripts/: rename.sh  setup_pyright.sh
backend/src/backend/: settings.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.js  page.js
frontend/src/app/(auth)/login/: page.js
frontend/src/app/(auth)/register/: page.js
frontend/src/components/: client_only_wrapper.js  navigation.js
frontend/src/lib/: authentication.js
