[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Asad Jibran Ahmed <me@asadjb.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.2"
django-cors-headers = "^4.3.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"
ipdb = "^0.13.13"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
